Output image for write up

--- a/lane_line.ipynb
+++ b/lane_line.ipynb
@@ -309,8 +309,6 @@
     "    # Calculate the new radii of curvature\n",
     "    left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
     "    right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
-    "\n",
-    "\n",
     "    return left_curverad, right_curverad\n",
     "\n",
     "def get_fitting_points(binary_warped, debug=False):\n",
@@ -320,9 +318,9 @@
     "    leftx_base = np.argmax(histogram[:midpoint])\n",
     "    rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
     "\n",
-    "    # Choose the number of sliding windows\n",
+    "    # the number of sliding windows\n",
     "    nwindows = 9\n",
-    "    # Set height of windows\n",
+    "    # height of windows\n",
     "    window_height = np.int(binary_warped.shape[0]/nwindows)\n",
     "    # Identify the x and y positions of all nonzero pixels in the image\n",
     "    nonzero = binary_warped.nonzero()\n",
@@ -384,7 +382,6 @@
     "\n",
     "    left_curverad, right_curverad = get_radius(ploty, debug)\n",
     "\n",
-    "\n",
     "    line_left = []\n",
     "    for i in range(len(left_fitx)):\n",
     "        line_left.append((left_fitx[i],ploty[i]))\n",
@@ -398,8 +395,6 @@
     "    pts_right = np.int32([line_right])\n",
     "    \n",
     "    xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
-    "\n",
-    "\n",
     "    camera_center = (left_fit[-1] + right_fit[-1])/2\n",
     "    center_diff = (camera_center - binary_warped.shape[1]/2) * xm_per_pix\n",
     "\n",
@@ -416,8 +411,6 @@
     "        display_image(binary_warped,out_img, 'binary', 'out_img')\n",
     "        \n",
     "    pts = np.hstack((pts_left, pts_right))\n",
-    "    \n",
-    "\n",
     "    return pts, left_curverad, right_curverad, center_diff"
    ]
   },
@@ -624,9 +617,23 @@
     "        diff_position = 'right'\n",
     "    cv2.putText(processed,'Car is ' + '%.2f' % (abs(center_diff)) + 'm ' + diff_position  + ' of the center',(100,300), font, 2,(255,255,255),2)\n",
     "\n",
-    "\n",
-    "\n",
     "    if debug:\n",
+    "        cv2.imwrite('output_images/original.jpg', img)\n",
+    "        cv2.imwrite('output_images/undistort.jpg', undistort)\n",
+    "        cv2.imwrite('output_images/sobel_x.jpg', sobel_x)\n",
+    "        cv2.imwrite('output_images/color_binary.jpg', color_binary)\n",
+    "        cv2.imwrite('output_images/combined_binary.jpg', combined_binary)\n",
+    "\n",
+    "        cv2.imwrite('output_images/binary_warped.jpg', binary_warped)\n",
+    "        cv2.imwrite('output_images/lane_img_wraped.jpg', lane_img_wraped)\n",
+    "        cv2.imwrite('output_images/lane_only.jpg', lane_only)\n",
+    "        cv2.imwrite('output_images/line_in_image.jpg', lane_only)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "        display_image(img,undistort, 'Original', 'Undistort',  'bgr', 'bgr')\n",
     "        display_image(sx_binary, sy_binary, 'sobel_x', 'sobel_y')\n",
     "        display_image(mag_binary, color_binary, 'mag_binary', 'color_binary')\n",
@@ -639,8 +646,6 @@
     "img = cv2.imread('test_images/test4.jpg')\n",
     "\n",
     "dst = process_image(img, mtx, dist, debug=True)\n",
-    "\n",
-    "\n",
     "\n",
     "images = glob.glob('test_images/*.jpg')\n",
     "\n",
